--- a/etc/kayobe/environments/training/kolla.yml
+++ b/etc/kayobe/environments/training/kolla.yml
@@ -13,3 +13,5 @@ kolla_enable_central_logging: false
 kolla_enable_prometheus: false
 kolla_enable_grafana: false
 kolla_enable_elasticsearch_curator: false
+
+kolla_enable_cinder: true
