--- a/etc/kayobe/environments/training/tenks.yml
+++ b/etc/kayobe/environments/training/tenks.yml
@@ -23,6 +23,19 @@ node_types:
     physical_networks:
       - physnet1
     console_log_enabled: true
+  storage:
+    memory_mb: 10240
+    vcpus: 2
+    volumes:
+      # There is a minimum disk space capacity requirement of 4GiB when using Ironic Python Agent:
+      # https://github.com/openstack/ironic-python-agent/blob/master/ironic_python_agent/utils.py#L290
+      # OS volume
+      - capacity: 15GiB
+      # Ceph volume
+      - capacity: 20GiB
+    physical_networks:
+      - physnet1
+    console_log_enabled: true
 
 specs:
   - type: controller
@@ -37,6 +50,13 @@ specs:
     ironic_config:
       resource_class: test-rc
       network_interface: noop
+  - type: storage
+    count: 3
+    node_name_prefix: storage
+    ironic_config:
+      resource_class: test-rc
+      network_interface: noop
+
 
 ipmi_address: 192.168.33.4
 ipmi_port_range_end: 6250
