--- a/etc/kayobe/environments/training/network-allocation.yml
+++ b/etc/kayobe/environments/training/network-allocation.yml
@@ -1,11 +1,22 @@
-aio_ips:
-  compute0: 192.168.33.6
-  compute1: 192.168.33.7
-  controller0: 192.168.33.3
-  controller1: 192.168.33.9
-  controller2: 192.168.33.10
-  seed: 192.168.33.5
-  seed-hypervisor: 192.168.33.4
-  storage0: 192.168.33.8
-  storage1: 192.168.33.11
-  storage2: 192.168.33.12
+external_ips:
+  seed-hypervisor: 192.168.58.1
+internal_ips:
+  seed-hypervisor: 192.168.57.3
+mgmt_ips:
+  seed: 192.168.55.2
+  seed-hypervisor: 192.168.55.1
+provision_oc_ips:
+  compute0: 192.168.53.6
+  compute1: 192.168.53.7
+  controller0: 192.168.53.3
+  controller1: 192.168.53.9
+  controller2: 192.168.53.10
+  seed: 192.168.53.5
+  seed-hypervisor: 192.168.53.4
+  storage0: 192.168.53.8
+  storage1: 192.168.53.11
+  storage2: 192.168.53.12
+provision_wl_ips:
+  seed-hypervisor: 192.168.56.1
+public_ips:
+  seed-hypervisor: 192.168.59.3
