--- a/etc/kayobe/environments/training/network-allocation.yml
+++ b/etc/kayobe/environments/training/network-allocation.yml
@@ -1,8 +1,24 @@
 external_ips:
+  compute0: 192.168.58.5
+  compute1: 192.168.58.6
+  controller0: 192.168.58.2
+  controller1: 192.168.58.3
+  controller2: 192.168.58.4
   seed-hypervisor: 192.168.58.1
 internal_ips:
+  compute0: 192.168.57.10
+  compute1: 192.168.57.11
+  controller0: 192.168.57.4
+  controller1: 192.168.57.5
+  controller2: 192.168.57.6
   seed-hypervisor: 192.168.57.3
+  storage0: 192.168.57.7
+  storage1: 192.168.57.8
+  storage2: 192.168.57.9
 mgmt_ips:
+  controller0: 192.168.55.3
+  controller1: 192.168.55.4
+  controller2: 192.168.55.5
   seed: 192.168.55.2
   seed-hypervisor: 192.168.55.1
 provision_oc_ips:
@@ -17,6 +33,27 @@ provision_oc_ips:
   storage1: 192.168.53.11
   storage2: 192.168.53.12
 provision_wl_ips:
+  controller0: 192.168.56.2
+  controller1: 192.168.56.3
+  controller2: 192.168.56.4
   seed-hypervisor: 192.168.56.1
 public_ips:
+  controller0: 192.168.59.4
+  controller1: 192.168.59.5
+  controller2: 192.168.59.6
   seed-hypervisor: 192.168.59.3
+storage_ips:
+  compute0: 192.168.61.7
+  compute1: 192.168.61.8
+  controller0: 192.168.61.1
+  controller1: 192.168.61.2
+  controller2: 192.168.61.3
+  storage0: 192.168.61.4
+  storage1: 192.168.61.5
+  storage2: 192.168.61.6
+tunnel_ips:
+  compute0: 192.168.60.4
+  compute1: 192.168.60.5
+  controller0: 192.168.60.1
+  controller1: 192.168.60.2
+  controller2: 192.168.60.3
